--- a/proper/index.html
+++ b/proper/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/babu_head.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>:D</title>
+    <title>:3</title>
   </head>
   <body>
     <div id="root"></div>
